# c-minus-compiler

./: .Makefile.swp  .gitignore  CMakeLists.txt  Makefile  README.md  analyze.cpp  analyze.h  cminus  code.cpp  code.h  gencode.cpp  gencode.h  gentiny.cpp  gentiny.h  globals.cpp  globals.h  lex.yy.cpp  lexer.l  main.cpp  notes.md  parse.y  parser.h  parser.tab.cpp  parser.y  qsort.c  qsort.tm  result.tac  run.sh  search.c  search.tm  symtab.cpp  symtab.h  test.c  test1.c  test2.c  test3.c  tm  util.cpp  util.h
demo/: qsort.c  search.c
report/: report.md
src/: analyze.cpp  gencode.cpp  gencode.h  gentiny.cpp  gentiny.h  globals.cpp  globals.h  lexer.h  lexer.l  main.cpp  parser.y  symtab.h  util.cpp  util.h
